--- a/client/ui/base/freight-sans/index.css
+++ b/client/ui/base/freight-sans/index.css
@@ -5,14 +5,24 @@
 
 @font-face {
   font-family: 'Freight Sans';
-  src: url('./woff/freight-sans-light.woff') format('woff');
+  src: url('./woff2/freight-sans-light.woff2') format('woff2'),
+       url('./woff/freight-sans-light.woff') format('woff');
   font-style: normal;
   font-weight: 200;
 }
 
 @font-face {
+  font-family: 'Freight Sans';
+  src: url('./woff2/freight-sans-light-italic.woff2') format('woff2'),
+       url('./woff/freight-sans-light-italic.woff') format('woff');
+  font-style: italic;
+  font-weight: 200;
+}
+
+@font-face {
   font-family: 'Freight Sans Small Caps';
-  src: url('./woff/freight-sans-light-small-caps.woff') format('woff');
+  src: url('./woff2/freight-sans-light-small-caps.woff2') format('woff2'),
+       url('./woff/freight-sans-light-small-caps.woff') format('woff');
   font-style: normal;
   font-weight: 200;
 }
@@ -23,21 +33,24 @@
 
 @font-face {
   font-family: 'Freight Sans';
-  src: url('./woff/freight-sans-book.woff') format('woff');
+  src: url('./woff2/freight-sans-book.woff2') format('woff2'),
+       url('./woff/freight-sans-book.woff') format('woff');
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Freight Sans';
-  src: url('./woff/freight-sans-book-italic.woff') format('woff');
+  src: url('./woff2/freight-sans-book-italic.woff2') format('woff2'),
+       url('./woff/freight-sans-book-italic.woff') format('woff');
   font-style: italic;
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Freight Sans Small Caps';
-  src: url('./woff/freight-sans-book-small-caps.woff') format('woff');
+  src: url('./woff2/freight-sans-book-small-caps.woff2') format('woff2'),
+       url('./woff/freight-sans-book-small-caps.woff') format('woff');
   font-style: normal;
   font-weight: 400;
 }
@@ -48,14 +61,24 @@
 
 @font-face {
   font-family: 'Freight Sans';
-  src: url('./woff/freight-sans-medium.woff') format('woff');
+  src: url('./woff2/freight-sans-medium.woff2') format('woff2'),
+       url('./woff/freight-sans-medium.woff') format('woff');
   font-style: normal;
   font-weight: 500;
 }
 
 @font-face {
+  font-family: 'Freight Sans';
+  src: url('./woff2/freight-sans-medium-italic.woff2') format('woff2'),
+       url('./woff/freight-sans-medium-italic.woff') format('woff');
+  font-style: italic;
+  font-weight: 500;
+}
+
+@font-face {
   font-family: 'Freight Sans Small Caps';
-  src: url('./woff/freight-sans-medium-small-caps.woff') format('woff');
+  src: url('./woff2/freight-sans-medium-small-caps.woff2') format('woff2'),
+       url('./woff/freight-sans-medium-small-caps.woff') format('woff');
   font-style: normal;
   font-weight: 500;
 }
@@ -66,7 +89,52 @@
 
 @font-face {
   font-family: 'Freight Sans';
-  src: url('./woff/freight-sans-bold.woff') format('woff');
+  src: url('./woff2/freight-sans-bold.woff2') format('woff2'),
+       url('./woff/freight-sans-bold.woff') format('woff');
   font-style: normal;
   font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Freight Sans';
+  src: url('./woff2/freight-sans-bold-italic.woff2') format('woff2'),
+       url('./woff/freight-sans-bold-italic.woff') format('woff');
+  font-style: italic;
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Freight Sans Small Caps';
+  src: url('./woff2/freight-sans-bold-small-caps.woff2') format('woff2'),
+       url('./woff/freight-sans-bold-small-caps.woff') format('woff');
+  font-style: normal;
+  font-weight: 700;
+}
+
+/**
+ * Black.
+ */
+
+@font-face {
+  font-family: 'Freight Sans';
+  src: url('./woff2/freight-sans-black.woff2') format('woff2'),
+       url('./woff/freight-sans-black.woff') format('woff');
+  font-style: normal;
+  font-weight: 900;
+}
+
+@font-face {
+  font-family: 'Freight Sans';
+  src: url('./woff2/freight-sans-black-italic.woff2') format('woff2'),
+       url('./woff/freight-sans-black-italic.woff') format('woff');
+  font-style: italic;
+  font-weight: 900;
+}
+
+@font-face {
+  font-family: 'Freight Sans Small Caps';
+  src: url('./woff2/freight-sans-black-small-caps.woff2') format('woff2'),
+       url('./woff/freight-sans-black-small-caps.woff') format('woff');
+  font-style: normal;
+  font-weight: 900;
 }
