--- a/templates/foot.hbs
+++ b/templates/foot.hbs
@@ -1,5 +1,8 @@
       </div>
     </div>
     <script src="/index.js"></script>
+    {{#if javascript}}
+    <script src="{{javascript}}"></script>
+    {{/if}}
   </body>
 </html>
