--- a/templates/head.hbs
+++ b/templates/head.hbs
@@ -18,6 +18,9 @@
       }}();
     </script>
     {{/if}}
+    {{#if css}}
+    <link rel="stylesheet" href="{{css}}">
+    {{/if}}
   </head>
   <body>
     <div class="Layout">
