--- a/client/lib/summary/index.css
+++ b/client/lib/summary/index.css
@@ -52,7 +52,7 @@
   color: var(--text-secondary);
   font-weight: var(--weight-light);
   line-height: 1;
-  font-family: var(--text-caps);
+  font-family: var(--family-caps);
   display: inline-block;
   padding-left: 25px;
   height: 16px;
